<resources>
    <string name="app_name">NewsApp</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="link">Link</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="category">Category</string>
    <string name="source">Source</string>
    <string name="news">News</string>
    <string name="gallery">Gallery</string>

    <string name="connection_error_message">Fail…</string>
    <string name="connection_success_message">Done!</string>

    <string name="date_">Published at: </string>
    <string name="author_">Author: </string>
    <string name="country_">Country: </string>
    <string name="language_">Language: </string>
    <string name="category_">Category: </string>
    <string name="source_">Source: </string>
</resources>