<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_lazy_gray">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/details_zoom">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_fragment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:padding="@dimen/_4dp"
            app:layout_constraintBottom_toTopOf="@id/details_fragment_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/details_fragment_image"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            android:src="@drawable/default_picture"
            app:layout_constraintTop_toBottomOf="@id/details_fragment_date"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_fragment_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"
            app:layout_constraintTop_toBottomOf="@id/details_fragment_date"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/details_fragment_author"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_fragment_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            app:layout_constraintTop_toBottomOf="@id/details_fragment_source"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/details_fragment_category"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_fragment_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            app:layout_constraintTop_toBottomOf="@id/details_fragment_author"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/details_fragment_language"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_fragment_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            app:layout_constraintTop_toBottomOf="@id/details_fragment_category"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/details_fragment_country"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_fragment_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            app:layout_constraintTop_toBottomOf="@id/details_fragment_language"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/details_fragment_link"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_fragment_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            app:layout_constraintTop_toBottomOf="@id/details_fragment_country"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            style="@style/title_text_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_fragment_title"
                    style="@style/title_text_style"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_fragment_description"
                    style="@style/description_text_style"
                    app:layout_constraintTop_toBottomOf="@id/details_fragment_title"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
